--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,21 +15,15 @@ jobs:
           wget -q https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
           sudo dpkg -i cloudflared-linux-amd64.deb
           
-      - name: Setup SSH config
+      - name: Setup SSH
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
-          cat >> ~/.ssh/config <<EOF
-          Host truenas
-            HostName ssh.allexisnascloud.site
-            User ${{ secrets.SSH_USERNAME }}
-            ProxyCommand cloudflared access ssh --hostname %h
-          EOF
           
       - name: Deploy
         run: |
-          ssh -o StrictHostKeyChecking=no truenas << 'EOF'
+          ssh -o StrictHostKeyChecking=no -o ProxyCommand="cloudflared access ssh --hostname ssh.allexisnascloud.site" ${{ secrets.SSH_USERNAME }}@ssh.allexisnascloud.site << 'EOF'
             cd /mnt/applications/BestPrice/api-product
             git pull origin master
             cd /mnt/applications/BestPrice
